--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Dinesh!</div>
-		<div class="tagline">All-Star Dev | Code Fanatic | Linux Hacker | Bleh</div>
+		<div class="intro">Hello, I'm Igor!</div>
+		<div class="tagline">All-Star Dev | Code Fanatic </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/flexdinesh">
+			<a target="_blank" href="https://github.com/baimera">
         <i class="fab fa-github" aria-hidden="true" title="Github"></i>
         <span class="sr-only">Github</span>
       </a>
-      <a target="_blank" href="https://twitter.com/flexdinesh">
+      <!-- <a target="_blank" href="https://twitter.com/flexdinesh">
         <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
         <span class="sr-only">Twitter</span>
-      </a>
+      </a> -->
       <a target="_blank" href="https://dev.to/flexdinesh">
         <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
         <span class="sr-only">DEV Community</span>
       </a>
-      <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
+      <!-- <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
         <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
         <span class="sr-only">StackOverflow</span>
-      </a>
-      <a target="_blank" href="https://www.linkedin.com/in/dineshpandiyan">
+      </a> -->
+      <a target="_blank" href="https://www.linkedin.com/in/igor-baima-91772a1a0/">
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
