--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
         <span class="sr-only">Twitter</span>
       </a> -->
-      <a target="_blank" href="https://dev.to/flexdinesh">
+      <a target="_blank" href="https://dev.to/baimera">
         <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
         <span class="sr-only">DEV Community</span>
       </a>
@@ -49,10 +49,10 @@
         <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
-      <a target="_blank" href="https://medium.com/@flexdinesh">
+      <!-- <a target="_blank" href="https://medium.com/@flexdinesh">
         <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
         <span class="sr-only">Medium</span>
-      </a>
+      </a> -->
       <a target="_blank" href="https://www.freecodecamp.org">
         <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
         <span class="sr-only">FreeCodeCamp</span>
