--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/baimera">
-        <i class="fab fa-github" aria-hidden="true" title="Github"></i>
+        <i class="icon" aria-hidden="true" title="Github"></i>
         <span class="sr-only">Github</span>
       </a>
       <!-- <a target="_blank" href="https://twitter.com/flexdinesh">
@@ -38,7 +38,7 @@
         <span class="sr-only">Twitter</span>
       </a> -->
       <a target="_blank" href="https://dev.to/baimera">
-        <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i>
+        <i class="icon" aria-hidden="true" title="DEV Community"></i>
         <span class="sr-only">DEV Community</span>
       </a>
       <!-- <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
@@ -46,7 +46,7 @@
         <span class="sr-only">StackOverflow</span>
       </a> -->
       <a target="_blank" href="https://www.linkedin.com/in/igor-baima-91772a1a0/">
-        <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
+        <i class="icon" aria-hidden="true" title="LinkedIn"></i>
         <span class="sr-only">LinkedIn</span>
       </a>
       <!-- <a target="_blank" href="https://medium.com/@flexdinesh">
@@ -54,15 +54,15 @@
         <span class="sr-only">Medium</span>
       </a> -->
       <a target="_blank" href="https://www.freecodecamp.org">
-        <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i>
+        <i class="icon" aria-hidden="true" title="FreeCodeCamp"></i>
         <span class="sr-only">FreeCodeCamp</span>
       </a>
       <a target="_blank" href="https://www.behance.net">
-        <i class="fab fa-behance" aria-hidden="true" title="Behance"></i>
+        <i class="icon" aria-hidden="true" title="Behance"></i>
         <span class="sr-only">Behance</span>
       </a>
       <a target="_blank" href="https://codepen.io">
-        <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i>
+        <i class="icon" aria-hidden="true" title="CodePen"></i>
         <span class="sr-only">CodePen</span>
       </a>
     </div>
