--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Dinesh Pandiyan | Awesome Dev</title>
+	<title>Igor Baima | Awesome Dev</title>
 
-	<link rel="icon" href="favicon.ico" type="image/png" />
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
@@ -29,40 +29,43 @@
 		<div class="tagline">All-Star Dev | Code Fanatic </div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
-			<a target="_blank" href="https://github.com/baimera">
-        <i class="icon" aria-hidden="true" title="Github"></i>
+			<a class="icono" target="_blank" href="https://github.com/baimera">
+        <!-- <i class="fab fa-github" aria-hidden="true" title="Github"></i> -->
+        <img src="./icons/icons8-github.svg" alt="icon github" class="icono">
         <span class="sr-only">Github</span>
       </a>
-      <!-- <a target="_blank" href="https://twitter.com/flexdinesh">
-        <i class="fab fa-twitter" aria-hidden="true" title="Twitter"></i>
-        <span class="sr-only">Twitter</span>
-      </a> -->
+      <a target="_blank" href="https://www.linkedin.com/in/igor-baima-91772a1a0/">
+        <!-- <i class="fab fa-linkedin" aria-hidden="true" title="LinkedIn"></i> -->
+        <img src="./icons/icons8-linkedin01.svg" alt="icon linkedin" class="icono">
+        <span class="sr-only">LinkedIn</span>
+      </a>
       <a target="_blank" href="https://dev.to/baimera">
-        <i class="icon" aria-hidden="true" title="DEV Community"></i>
+        <!-- <i class="fab fa-dev" aria-hidden="true" title="DEV Community"></i> -->
+        <img src="./icons/icons8-dev.svg" alt="icon dev" class="icono">
         <span class="sr-only">DEV Community</span>
       </a>
       <!-- <a target="_blank" href="https://stackoverflow.com/story/flexdinesh">
         <i class="fab fa-stack-overflow" aria-hidden="true" title="StackOverflow"></i>
         <span class="sr-only">StackOverflow</span>
       </a> -->
-      <a target="_blank" href="https://www.linkedin.com/in/igor-baima-91772a1a0/">
-        <i class="icon" aria-hidden="true" title="LinkedIn"></i>
-        <span class="sr-only">LinkedIn</span>
-      </a>
+      
       <!-- <a target="_blank" href="https://medium.com/@flexdinesh">
         <i class="fab fa-medium" aria-hidden="true" title="Medium"></i>
         <span class="sr-only">Medium</span>
       </a> -->
       <a target="_blank" href="https://www.freecodecamp.org">
-        <i class="icon" aria-hidden="true" title="FreeCodeCamp"></i>
+        <!-- <i class="fab fa-free-code-camp" aria-hidden="true" title="FreeCodeCamp"></i> -->
+        <img src="./icons/icons8-free-code-camp.svg" alt="icon fcc" class="icono">
         <span class="sr-only">FreeCodeCamp</span>
       </a>
       <a target="_blank" href="https://www.behance.net">
-        <i class="icon" aria-hidden="true" title="Behance"></i>
+        <!-- <i class="fab fa-behance" aria-hidden="true" title="Behance"></i> -->
+        <img src="./icons/icons8-behance.svg" alt="icon behance" class="icono">
         <span class="sr-only">Behance</span>
       </a>
       <a target="_blank" href="https://codepen.io">
-        <i class="icon" aria-hidden="true" title="CodePen"></i>
+        <!-- <i class="fab fa-codepen" aria-hidden="true" title="CodePen"></i> -->
+        <img src="./icons/icons8-codepen.svg" alt="icon codepen" class="icono">
         <span class="sr-only">CodePen</span>
       </a>
     </div>
